# lxmanager

./: .gitignore  INSTALL  README  TODO  autogen.sh  configure.ac
po/: LINGUAS  POTFILES  be.gmo  et.gmo  fi.gmo  gl.gmo  he.gmo  pt.gmo  sl.gmo
src/: Application.vala  DesktopConfig.vala  Makefile.am  ManagerConfig.vala  ManagerTEMP.vala  ManagerWindow.vala  TEMP.vala
src/gtk/: fm-dir-tree-model.c  fm-dir-tree-view.c  fm-dir-tree-view.h  fm-folder-view.c  fm-folder-view.h
vapi/: fm-gtk.vapi  libfmcore.vapi
